[tool.poetry]
name = "weasyprint-cli-docker"
version = "0.1.0"
description = ""
authors = ["Michael Lisitsa"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
weasyprint = "60.2"
# New pydyf not supported with older versions of WeasyPrint
# see https://github.com/Kozea/WeasyPrint/issues/2203
pydyf = "0.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
